# Aegis-java

./: pom.xml
agentscope-service/: pom.xml
agentscope-service/src/main/java/com/yunzhi/llm/agentscope/: AgentScopeApplication.java
agentscope-service/src/main/java/com/yunzhi/llm/agentscope/chat/: AgentChatService.java  PlainChatService.java  SseEvents.java
agentscope-service/src/main/java/com/yunzhi/llm/agentscope/config/: AdminWebConfig.java  AegisProperties.java  SqliteDataSourceConfig.java  WebConfig.java
agentscope-service/src/main/resources/: application-local.yml  application-local.yml.example  application.yml
agentscope-tauri-agent/: README.md  index.html  package-lock.json  package.json
agentscope-tauri-agent/src-tauri/: Cargo.toml  tauri.conf.json
agentscope-tauri-agent/src-tauri/capabilities/: default.json
agentscope-tauri-agent/src-tauri/icons/: icon.icns
agentscope-tauri-agent/src-tauri/src/: main.rs
agentscope-tauri-agent/src/api/: chat.ts
agentscope-tauri-agent/src/components/: AppMark.vue  AppMenuBar.vue  ChatInput.vue  ChatMessageList.vue  SettingsPanel.vue  TraceStepBlock.vue
agentscope-tauri-agent/src/stores/: chat.ts  settings.ts
agentscope-tauri-agent/src/styles/: main.css
agentscope-tauri-agent/src/types/: chat.ts
agentscope-tauri-agent/src/views/: ChatView.vue
doc/: agentscope-2.0-migration.md  agentscope-tauri-agent.md
generalAgent/: pom.xml
generalAgent/src/main/java/com/aegis/general/agent/: GeneralAgentApplication.java
generalAgent/src/main/resources/: application.yml
(+41 files in other folders)
